--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,9 @@
               "src/assets"
             ],
             "styles": [
+              "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css" ,
-              "src/styles.css"
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
