--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-loading-bar/core": "^6.0.2",
     "@ngx-loading-bar/http-client": "^6.0.2",
     "bootstrap": "^5.2.0",
+    "buffer": "^6.0.3",
     "jquery": "^3.6.0",
     "ngx-spinner": "^14.0.0",
     "popper.js": "^1.16.1",
@@ -33,6 +34,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^20.14.9",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
