--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^20.14.9",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
