--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "^14.1.0",
     "@types/jasmine": "~4.0.0",
-    "@types/node": "^20.14.9",
+    "@types/node": "^16.18.126",
     "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
@@ -42,6 +42,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "4.8"
   }
 }
